--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,12 @@
       Napkin product
     </a>
   </li>
+  <li class="nav-list-item">
+    <a class="nav-list-link" href="#">
+      Haddock API
+    </a>
+  </li>
+
   {%- assign titled_pages = include.pages
         | where_exp:"item", "item.title != nil" -%}
 
