--- a/assets/css/just-the-docs-dark.css
+++ b/assets/css/just-the-docs-dark.css
@@ -140,7 +140,7 @@ img { max-width: 100%; height: auto; }
 
 hr { height: 1px; padding: 0; margin: 2rem 0; background-color: #44434d; border: 0; }
 
-.side-bar { z-index: 0; display: flex; flex-wrap: wrap; background-color: #27262b; }
+.side-bar { z-index: 0; display: flex; flex-wrap: wrap; background-image: url("/assets/images/dark-background-waves.jpg"); background-size: cover; }
 
 @media (min-width: 50rem) { .side-bar { flex-wrap: nowrap; position: fixed; width: 248px; height: 100%; flex-direction: column; border-right: 1px solid #44434d; align-items: flex-end; } }
 
@@ -172,11 +172,24 @@ hr { height: 1px; padding: 0; margin: 2rem 0; background-color: #44434d; border:
 
 .site-nav.nav-open { display: block; }
 
-@media (min-width: 50rem) { .site-nav { display: block; padding-top: 3rem; padding-bottom: 1rem; overflow-y: auto; flex: 1 1 auto; } }
+@media (min-width: 50rem) { .site-nav { display: block; padding-top: 0; /* $sp-8; */ padding-bottom: 1rem; overflow-y: auto; flex: 1 1 auto; } }
 
+/* .site-nav .nav-list-link {
+    color: #fff;
+}
+
+.site-nav .nav-list-link.active {
+    color: #72cef3;
+}
+
+.site-nav .nav-list-link:hover {
+    background-color: hsla(0, 0%, 100%, 0.2);
+}
+
+*/
 .site-header { display: flex; min-height: 60px; align-items: center; }
 
-@media (min-width: 50rem) { .site-header { height: 60px; max-height: 60px; border-bottom: 1px solid #44434d; } }
+@media (min-width: 50rem) { .site-header { height: 60px; max-height: 60px; /* border-bottom: $border $border-color; */ } }
 
 .site-title { padding-right: 1rem; padding-left: 1rem; flex-grow: 1; display: flex; height: 100%; align-items: center; padding-top: 0.75rem; padding-bottom: 0.75rem; color: #f5f6fa; font-size: 18px !important; }
 
@@ -200,15 +213,15 @@ body { position: relative; padding-bottom: 4rem; overflow-y: scroll; }
 
 @media (min-width: 50rem) { body { position: static; padding-bottom: 0; } }
 
-.site-footer { padding-right: 1rem; padding-left: 1rem; position: absolute; bottom: 0; left: 0; padding-top: 1rem; padding-bottom: 1rem; color: #959396; font-size: 11px !important; }
+.site-footer { padding-right: 1rem; padding-left: 1rem; position: absolute; bottom: 0; left: 0; padding-top: 1rem; padding-bottom: 1rem; color: #959396; font-size: 9px !important; }
 
 @media (min-width: 50rem) { .site-footer { padding-right: 2rem; padding-left: 2rem; } }
 
-@media (min-width: 31.25rem) { .site-footer { font-size: 12px !important; } }
+@media (min-width: 31.25rem) { .site-footer { font-size: 10px !important; } }
 
 @media (min-width: 50rem) { .site-footer { position: static; justify-self: end; } }
 
-.icon { width: 1.5rem; height: 1.5rem; color: #2c84fa; }
+.icon { width: 1.5rem; height: 1.5rem; color: #59c6f1; }
 
 .main-content { line-height: 1.6; }
 
@@ -292,13 +305,13 @@ body { position: relative; padding-bottom: 4rem; overflow-y: scroll; }
 
 @media (min-width: 50rem) and (min-width: 31.25rem) { .nav-list .nav-list-item { font-size: 14px !important; } }
 
-.nav-list .nav-list-item .nav-list-link { display: block; min-height: 3rem; padding-top: 0.25rem; padding-bottom: 0.25rem; line-height: 2.5rem; padding-right: 3rem; padding-left: 1rem; }
+.nav-list .nav-list-item .nav-list-link { display: block; min-height: 3rem; padding-top: 0.25rem; padding-bottom: 0.25rem; color: #fff; line-height: 2.5rem; padding-right: 3rem; padding-left: 1rem; /* &.active { font-weight: 600; text-decoration: none; } &:hover, &.active { background-image: linear-gradient( -90deg, rgba($feedback-color, 1) 0%, rgba($feedback-color, 0.8) 80%, rgba($feedback-color, 0) 100% ); } */ }
 
 @media (min-width: 50rem) { .nav-list .nav-list-item .nav-list-link { min-height: 2rem; line-height: 1.5rem; padding-right: 2rem; padding-left: 2rem; } }
 
-.nav-list .nav-list-item .nav-list-link.active { font-weight: 600; text-decoration: none; }
+.nav-list .nav-list-item .nav-list-link.active { color: #72cef3; }
 
-.nav-list .nav-list-item .nav-list-link:hover, .nav-list .nav-list-item .nav-list-link.active { background-image: linear-gradient(-90deg, #201f23 0%, rgba(32, 31, 35, 0.8) 80%, rgba(32, 31, 35, 0) 100%); }
+.nav-list .nav-list-item .nav-list-link:hover { background-color: rgba(255, 255, 255, 0.2); border-radius: 12px; }
 
 .nav-list .nav-list-item .nav-list-expander { position: absolute; right: 0; width: 3rem; height: 3rem; padding-top: 0.75rem; padding-right: 0.75rem; padding-bottom: 0.75rem; padding-left: 0.75rem; color: #2c84fa; }
 
@@ -576,11 +589,11 @@ tbody tr:last-of-type td { padding-bottom: 0.75rem; }
 
 thead th { border-bottom: 1px solid #44434d; }
 
-code { padding: 0.2em 0.15em; font-weight: 400; background-color: #302d36; border: 1px solid #44434d; border-radius: 4px; }
+code { padding: 0.2em 0.15em; font-weight: 400; background-color: #fefefe; border: 1px solid #44434d; border-radius: 4px; }
 
 a:visited code { border-color: #44434d; }
 
-div.highlighter-rouge { padding: 0.75rem; margin-top: 0; margin-bottom: 0.75rem; overflow-x: auto; background-color: #302d36; border-radius: 4px; box-shadow: none; -webkit-overflow-scrolling: touch; }
+div.highlighter-rouge { padding: 0.75rem; margin-top: -10px; margin-bottom: 0.75rem; overflow-x: auto; background-color: #fff; border-radius: 9px; border: 1px solid #bcbec0; color: #1b1926; box-shadow: none; -webkit-overflow-scrolling: touch; }
 
 div.highlighter-rouge div.highlight, div.highlighter-rouge pre.highlight, div.highlighter-rouge code { padding: 0; margin: 0; border: 0; }
 
@@ -1540,16 +1553,10 @@ figure.highlight pre, figure.highlight code { padding: 0; margin: 0; border: 0; 
 
 @media print { .site-footer, .site-button, #edit-this-page, #back-to-top, .site-nav, .main-header { display: none !important; } .side-bar { width: 100%; height: auto; border-right: 0 !important; } .site-header { border-bottom: 1px solid #44434d; } .site-title { font-size: 16px !important; font-weight: 700 !important; } .text-small { font-size: 8pt !important; } pre.highlight { border: 1px solid #44434d; } .main { max-width: none; margin-left: 0; } }
 
-pre.highlight { position: relative; }
+button.copy { top: 0px; left: 0px; margin-left: -12px; font-size: 10px; border: none; line-height: 18px; border-radius: 12px; background-image: linear-gradient(80deg, #7877db, #59c6f1); font-family: 'Baloo 2', sans-serif; color: #fff; }
 
-pre.highlight > button.copy { position: absolute; top: 0px; left: 0px; margin: -12px; font-size: 7px; opacity: 0.7; }
+button.copy:hover { background-color: #59c6f1; background-image: -webkit-gradient(linear, left top, left bottom, from(#59c6f1), to(#59c6f1)); }
 
-pre.highlight > button.copied { opacity: 0.4 !important; }
-
-pre.highlight > button { opacity: 0; }
-
-pre.highlight:hover > button { opacity: 1; }
-
-pre.highlight > button:active, pre.highlight > button:focus { opacity: 1; }
+button.copy.copied { opacity: 0.9 !important; }
 
 /*# sourceMappingURL=just-the-docs-dark.css.map */
