--- a/assets/css/just-the-docs-dark.css
+++ b/assets/css/just-the-docs-dark.css
@@ -1553,7 +1553,7 @@ figure.highlight pre, figure.highlight code { padding: 0; margin: 0; border: 0; 
 
 @media print { .site-footer, .site-button, #edit-this-page, #back-to-top, .site-nav, .main-header { display: none !important; } .side-bar { width: 100%; height: auto; border-right: 0 !important; } .site-header { border-bottom: 1px solid #44434d; } .site-title { font-size: 16px !important; font-weight: 700 !important; } .text-small { font-size: 8pt !important; } pre.highlight { border: 1px solid #44434d; } .main { max-width: none; margin-left: 0; } }
 
-button.copy { top: 0px; left: 0px; margin-left: -12px; font-size: 10px; border: none; line-height: 18px; border-radius: 12px; background-image: linear-gradient(80deg, #7877db, #59c6f1); font-family: 'Baloo 2', sans-serif; color: #fff; }
+button.copy { position: relative; top: 0px; left: 0px; margin-left: -12px; font-size: 10px; border: none; line-height: 18px; border-radius: 12px; background-image: linear-gradient(80deg, #7877db, #59c6f1); font-family: 'Baloo 2', sans-serif; color: #fff; }
 
 button.copy:hover { background-color: #59c6f1; background-image: -webkit-gradient(linear, left top, left bottom, from(#59c6f1), to(#59c6f1)); }
 
