--- a/assets/css/just-the-docs-dark.css
+++ b/assets/css/just-the-docs-dark.css
@@ -176,17 +176,17 @@ hr { height: 1px; padding: 0; margin: 2rem 0; background-color: #44434d; border:
 
 .gradient-border { background: linear-gradient(80deg, #7479dc, #0dc1f0), linear-gradient(80deg, #7479dc, #0dc1f0); background-origin: border-box; padding: 0px !important; display: inline-block !important; }
 
-.gradient-border > a { margin: 0px !important; display: inline-block !important; }
+.gradient-border > a { margin: 0px !important; display: inline-block !important; line-height: 0px; }
 
 .site-super-header { overflow: auto; background-color: #192a40; display: flex; align-items: center; }
 
 .site-super-header :last-child { margin-left: 2vw; font-weight: bold; }
 
-.link-button { line-height: 0px; font-familiy: mono; color: #fff; background: #192a40; }
+.link-button { line-height: 1.9; font-familiy: mono; color: #fff; background: #192a40; white-space: nowrap; }
 
 .link-button.active, .link-button:hover { background-color: rgba(255, 255, 255, 0.2) !important; }
 
-.site-logo { /* width: 7vw; */ /* padding: 0.6vw; */ /* $font-size-map: (400px: 22px, 800px: 28px, 900px: 34px); */ /* @include poly-fluid-sizing('height', $font-size-map); */ /* margin-right: 1vw; */ background-image: url("https://soostone.github.io/assets/images/logo-and-name.svg"); background-repeat: no-repeat; background-position: left center; background-size: contain; }
+.site-logo { background-image: url("https://soostone.github.io/assets/images/logo-and-name.svg"); background-repeat: no-repeat; background-position: left center; background-size: contain; }
 
 .site-logo + * { margin-left: auto !important; }
 
@@ -241,8 +241,6 @@ hr { height: 1px; padding: 0; margin: 2rem 0; background-color: #44434d; border:
 
 .white-napkin { background-image: url("https://soostone.github.io/assets/images/white-napkin.svg"); }
 
-.floatGroup:after { content: ""; display: table; clear: both; }
-
 .site-button { display: flex; height: 100%; padding: 1rem; align-items: center; }
 
 @media (min-width: 56.25rem) { .site-header .site-button { display: none; } }
@@ -251,7 +249,7 @@ hr { height: 1px; padding: 0; margin: 2rem 0; background-color: #44434d; border:
 
 .site-button:hover { background-image: linear-gradient(-90deg, #201f23 0%, rgba(32, 31, 35, 0.8) 100%); }
 
-body { position: relative; padding: 0px; margin: 0px; overflow-y: scroll; /* @include mq(md) { */ /*   position: static; */ /*   padding-bottom: 0; */ /* } */ }
+body { position: relative; padding: 0px; margin: 0px; overflow-y: scroll; }
 
 .site-footer { display: flex; font-size: 14px; padding-top: 40px; padding-bottom: 60px; color: #fff; }
 
@@ -413,6 +411,12 @@ a { text-decoration: none !important; }
 
 .main-content p { line-height: 1.7 !important; }
 
+.search-input { font-size: 16px; }
+
+#search-input::placeholder { font-size: 16px; }
+
+.search-label .search-icon { width: 20px; height: 20px; margin: 2px 7px 1px 16px; }
+
 h1, .text-alpha { margin-top: 0px; font-size: 26px; font-weight: bold; }
 
 h2, .text-beta { font-size: 22px; }
@@ -493,7 +497,7 @@ ul.nav-list-link { font-size: 18px; }
 
 .media-bar { margin: 40px 0px 10px 0px; }
 
-.link-button { font-size: 14px; margin: 0px 0.2vw; padding: 0px 1vw; border-radius: 1vw; }
+.link-button { font-size: 14px; margin: 0px 1px; padding: 0px 13px; border-radius: 7px; }
 
 .heart { font-size: 50px; }
 
@@ -501,7 +505,7 @@ ul.nav-list-link { font-size: 18px; }
 
 .gradient-border > a { border-radius: 4px !important; padding: 10px !important; }
 
-.site-logo { width: 77px; height: 22px; padding: 6px; margin-right: 10px; }
+.site-logo { width: 100px; height: 31px; padding: 6px; margin-right: 10px; }
 
 .site-super-header { padding: 5px 12px; }
 
@@ -521,11 +525,11 @@ h6, .text-zeta { font-size: 11px !important; color: #44434d; }
 
 .text-right { text-align: right !important; }
 
-@media (min-width: 1000px) { h1 { font-size: 30px; } h2 { font-size: 24px; } h3 { font-size: 22px; } h4 { font-size: 20px; letter-spacing: 0.2em; } h5 { font-size: 18px; } a, p, li { font-size: 18px; } ol + h1 { margin-top: 32px; } h1 + h2 { margin-top: 12px; } h2 + p, h3 + p, h4 + p { margin-top: 7px !important; } h2 + h3 { margin-top: 12px; } ul + h2 { margin-top: 37px; } h2 { margin-top: 12px; } p + h3 { margin-top: 22px; } p + h2 { margin-top: 24px; } p + p { margin-top: 7px; } p + h4 { margin-top: 22px; } div.highlighter-rouge code { font-size: 18px; } div.highlighter-rouge + h3 { margin-top: 22px; } .highlighter-rouge + p { margin-top: 32px; } p + h4.top-code-caption { margin-top: 32px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 27px; } h4.top-code-caption { font-size: 16px; } button.copy { font-size: 14px; line-height: 30px; } .main-content-wrap { padding-top: 32px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 16px; } .nav-list-link { font-size: 22px; } ul.nav-list-link { font-size: 20px; } .nav-list .nav-list-item { padding-left: 40px; padding-reight: 40px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 18px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 7px; } .logo { width: 18px; height: 18px; } .white-napkin { width: 160px; height: 54px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 18px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 12px !important; } .site-logo { width: 78px; height: 24px; padding: 8px; margin-right: 12px; } .site-super-header { padding: 7px 14px; } }
+@media (min-width: 1000px) { h1 { font-size: 30px; } h2 { font-size: 24px; } h3 { font-size: 22px; } h4 { font-size: 20px; letter-spacing: 0.2em; } h5 { font-size: 18px; } a, p, li, .search-input, #search-input::placeholder { font-size: 18px; } ol + h1 { margin-top: 32px; } h1 + h2 { margin-top: 12px; } h2 + p, h3 + p, h4 + p { margin-top: 7px !important; } h2 + h3 { margin-top: 12px; } ul + h2 { margin-top: 37px; } h2 { margin-top: 12px; } p + h3 { margin-top: 22px; } p + h2 { margin-top: 24px; } p + p { margin-top: 7px; } p + h4 { margin-top: 22px; } div.highlighter-rouge code { font-size: 18px; } div.highlighter-rouge + h3 { margin-top: 22px; } .highlighter-rouge + p { margin-top: 32px; } p + h4.top-code-caption { margin-top: 32px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 27px; } h4.top-code-caption { font-size: 16px; } button.copy { font-size: 14px; line-height: 30px; } .main-content-wrap { padding-top: 32px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 16px; } .nav-list-link { font-size: 22px; } ul.nav-list-link { font-size: 20px; } .nav-list .nav-list-item { padding-left: 40px; padding-reight: 40px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 18px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 7px; } .logo { width: 18px; height: 18px; } .white-napkin { width: 160px; height: 54px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 18px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 15px !important; } .site-logo { width: 120px; height: 36px; padding: 8px; margin-right: 12px; } .site-super-header { padding: 7px 14px; } .search-label .search-icon { width: 22px; height: 22px; margin: 2px 10px 1px 16px; } }
 
-@media (min-width: 2000px) { h1 { font-size: 38px; } h2 { font-size: 26px; } h3 { font-size: 24px; } h4 { font-size: 22px; letter-spacing: 0.2em; } h5 { font-size: 20px; } a, p, li { font-size: 20px; } ol + h1 { margin-top: 34px; } h1 + h2 { margin-top: 14px; } h2 + p, h3 + p, h4 + p { margin-top: 9px !important; } h2 + h3 { margin-top: 14px; } ul + h2 { margin-top: 39px; } h2 { margin-top: 14px; } p + h3 { margin-top: 24px; } p + h2 { margin-top: 26px; } p + p { margin-top: 9px; } p + h4 { margin-top: 24px; } div.highlighter-rouge code { font-size: 20px; } div.highlighter-rouge + h3 { margin-top: 24px; } .highlighter-rouge + p { margin-top: 34px; } p + h4.top-code-caption { margin-top: 34px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 29px; } h4.top-code-caption { font-size: 18px; } button.copy { font-size: 16px; line-height: 30px; } .main-content-wrap { padding-top: 34px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 18px; } .nav-list-link { font-size: 24px; } ul.nav-list-link { font-size: 22px; } .nav-list .nav-list-item { padding-left: 80px; padding-reight: 80px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 20px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 9px; } .logo { width: 20px; height: 20px; } .white-napkin { width: 160px; height: 54px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 20px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 12px !important; } .site-logo { width: 80px; height: 24px; padding: 8px; margin-right: 12px; } .site-super-header { padding: 7px 14px; } }
+@media (min-width: 2000px) { h1 { font-size: 38px; } h2 { font-size: 26px; } h3 { font-size: 24px; } h4 { font-size: 22px; letter-spacing: 0.2em; } h5 { font-size: 20px; } a, p, li, .search-input, #search-input::placeholder { font-size: 20px; } ol + h1 { margin-top: 34px; } h1 + h2 { margin-top: 14px; } h2 + p, h3 + p, h4 + p { margin-top: 9px !important; } h2 + h3 { margin-top: 14px; } ul + h2 { margin-top: 39px; } h2 { margin-top: 14px; } p + h3 { margin-top: 24px; } p + h2 { margin-top: 26px; } p + p { margin-top: 9px; } p + h4 { margin-top: 24px; } div.highlighter-rouge code { font-size: 20px; } div.highlighter-rouge + h3 { margin-top: 24px; } .highlighter-rouge + p { margin-top: 34px; } p + h4.top-code-caption { margin-top: 34px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 29px; } h4.top-code-caption { font-size: 18px; } button.copy { font-size: 16px; line-height: 30px; } .main-content-wrap { padding-top: 34px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 18px; } .nav-list-link { font-size: 24px; } ul.nav-list-link { font-size: 22px; } .nav-list .nav-list-item { padding-left: 80px; padding-reight: 80px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 20px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 9px; } .logo { width: 20px; height: 20px; } .white-napkin { width: 160px; height: 54px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 20px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 17px !important; } .site-logo { width: 140px; height: 40px; padding: 8px; margin-right: 12px; } .site-super-header { padding: 7px 14px; } }
 
-@media (min-width: 3000px) { h1 { font-size: 44px; } h2 { font-size: 28px; } h3 { font-size: 26px; } h4 { font-size: 24px; letter-spacing: 0.2em; } h5 { font-size: 22px; } a, p, li { font-size: 22px; } ol + h1 { margin-top: 36px; } h1 + h2 { margin-top: 16px; } h2 + p, h3 + p, h4 + p { margin-top: 11px !important; } h2 + h3 { margin-top: 16px; } ul + h2 { margin-top: 41px; } h2 { margin-top: 16px; } p + h3 { margin-top: 26px; } p + h2 { margin-top: 28px; } p + p { margin-top: 11px; } p + h4 { margin-top: 26px; } div.highlighter-rouge code { font-size: 22px; } div.highlighter-rouge + h3 { margin-top: 26px; } .highlighter-rouge + p { margin-top: 36px; } p + h4.top-code-caption { margin-top: 36px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 31px; } h4.top-code-caption { font-size: 20px; } button.copy { font-size: 18px; line-height: 30px; } .main-content-wrap { padding-top: 36px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 20px; } .nav-list-link { font-size: 26px; } ul.nav-list-link { font-size: 24px; } .nav-list .nav-list-item { padding-left: 80px; padding-reight: 80px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 22px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 11px; } .logo { width: 22px; height: 22px; } .white-napkin { width: 168px; height: 58px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 22px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 12px !important; } .site-logo { width: 82px; height: 26px; padding: 10px; margin-right: 14px; } .site-super-header { padding: 9px 16px; } }
+@media (min-width: 3000px) { h1 { font-size: 44px; } h2 { font-size: 28px; } h3 { font-size: 26px; } h4 { font-size: 24px; letter-spacing: 0.2em; } h5 { font-size: 22px; } a, p, li, .search-input, #search-input::placeholder { font-size: 22px; } ol + h1 { margin-top: 36px; } h1 + h2 { margin-top: 16px; } h2 + p, h3 + p, h4 + p { margin-top: 11px !important; } h2 + h3 { margin-top: 16px; } ul + h2 { margin-top: 41px; } h2 { margin-top: 16px; } p + h3 { margin-top: 26px; } p + h2 { margin-top: 28px; } p + p { margin-top: 11px; } p + h4 { margin-top: 26px; } div.highlighter-rouge code { font-size: 22px; } div.highlighter-rouge + h3 { margin-top: 26px; } .highlighter-rouge + p { margin-top: 36px; } p + h4.top-code-caption { margin-top: 36px; } div.highlighter-rouge + h4.top-code-caption { margin-top: 31px; } h4.top-code-caption { font-size: 20px; } button.copy { font-size: 18px; line-height: 30px; } .main-content-wrap { padding-top: 36px; } code.highlighter-rouge { padding: 2px 10px 0px 10px; font-size: 20px; } .nav-list-link { font-size: 26px; } ul.nav-list-link { font-size: 24px; } .nav-list .nav-list-item { padding-left: 80px; padding-reight: 80px; } .site-footer .link-table { margin-top: 20px; } .site-footer .link-table a { margin-bottom: 20px; } .site-footer .link-table + .link-table { margin-right: 200px; } .site-footer div, .site-footer a { font-size: 22px; } .site-footer .gradient-border { border-radius: 11px !important; } .site-footer .gradient-border > a { padding: 20px !important; border-radius: 10px !important; } .media-pad { padding: 11px; } .logo { width: 22px; height: 22px; } .white-napkin { width: 168px; height: 58px; } .media-bar { margin: 40px 0px 10px 0px; } .link-button { font-size: 22px; } .heart { font-size: 52px; } .gradient-border { border: 2px solid transparent; border-radius: 7px; } .gradient-border > a { border-radius: 5px !important; padding: 19px !important; } .site-logo { width: 160px; height: 45px; padding: 10px; margin-right: 14px; } .site-super-header { padding: 9px 16px; } }
 
 .label, .label-blue { display: inline-block; padding-top: 0.16em; padding-right: 0.56em; padding-bottom: 0.16em; padding-left: 0.56em; margin-right: 0.5rem; margin-left: 0.5rem; color: #fff; text-transform: uppercase; vertical-align: middle; background-color: #2869e6; font-size: 11px !important; border-radius: 12px; }
 
@@ -599,19 +603,19 @@ h6, .text-zeta { font-size: 11px !important; color: #44434d; }
 
 .search-input-wrap { position: relative; display: flex; flex-direction: row-reverse; z-index: 1; overflow: hidden; border-radius: 4px; }
 
-.search-input { width: 100%; padding: 9px 0px; padding-right: 1rem; font-size: 1.2vw; color: #534d6d; background-color: #302d36; border-top: 0; border-right: 0; border-bottom: 0; border-left: 0; border-radius: 0; }
+.search-input { width: 100%; padding: 9px 0px; padding-right: 1rem; color: #534d6d; background-color: #302d36; border-top: 0; border-right: 0; border-bottom: 0; border-left: 0; border-radius: 0; }
 
-@media (min-width: 56.25rem) { .search-input { padding-top: 8px; font-size: 1.2vw; color: #534d6d; background-color: #27262b; transition: padding-left linear 200ms; } }
+@media (min-width: 56.25rem) { .search-input { color: #534d6d; background-color: #27262b; transition: padding-left linear 200ms; } }
 
 .search-input:focus { outline: 0; }
 
 .search-input:focus + .search-label .search-icon { color: #2c84fa; }
 
-.search-label { display: flex; background-color: #fff; /* @include mq(md) { */ /*     padding-left: 66px; //$gutter-spacing; */ /*   transition: padding-left linear 200ms; */ /* } */ }
+.search-label { display: flex; background-color: #fff; }
 
-.search-label .search-icon { width: 1.5vw; height: 1.5vw; align-self: center; color: #534d6d; margin: 0.3vw 0.6vw 0.3vw 0.8vw; }
+.search-label .search-icon { align-self: center; color: #534d6d; }
 
-#search-input::placeholder { color: #534d6d; opacity: 0.7; font-size: 1.2vw; }
+#search-input::placeholder { color: #534d6d; opacity: 0.7; }
 
 .search-results { position: absolute; left: 0; display: none; width: 100%; max-height: calc(100% - 4rem); overflow-y: auto; background-color: #302d36; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08); }
 
@@ -667,7 +671,7 @@ h6, .text-zeta { font-size: 11px !important; color: #44434d; }
 
 .search-button { position: fixed; right: 1rem; bottom: 1rem; display: flex; width: 3.5rem; height: 3.5rem; background-color: #302d36; border: 1px solid rgba(44, 132, 250, 0.3); border-radius: 1.75rem; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08); align-items: center; justify-content: center; }
 
-.search-overlay { position: fixed; top: 0; left: 0; z-index: 1; width: 0; height: 0; background-color: rgba(0, 0, 0, 0.3); opacity: 0; transition: opacity ease 400ms, width 0s 400ms, height 0s 400ms; }
+.search-overlay { position: fixed; top: 0; left: 0; z-index: 1; width: 0; height: 0; background-color: rgba(0, 0, 0, 0.9); opacity: 0; transition: opacity ease 400ms, width 0s 400ms, height 0s 400ms; }
 
 .search-active { /* .search { */ /*   position: fixed; */ /*   top: 0; */ /*   left: 0; */ /*   width: 100%; */ /*   height: 100%; */ /*   padding: 0; */ /* } */ }
 
